@@ -1,3 +1,9 @@
+2008-09-15  Callum McKenzie  <callum@spooky-possum.org>
+
+	* drive-button.c: Replace the calls to
+	g_volume_get_activation_root since they don't appear to be working
+	properly. The "Play DVD" button now comes up correctly.
+
 2008-09-13  Callum McKenzie  <callum@spooky-possum.org>
 
 	* drive-button.c (eject_finish): Avoid a crash on eject by
